# AI-hedge-fund

./: .gitignore  README.md
backend/: README.md  main.py  pyproject.toml
backend/src/agents/: bill_ackman.py  fundamental.py  portfolio_manager.py  risk_management_agent.py  sentiment.py  technicals.py  valuation.py  warren_buffet.py
backend/src/data/: cache.py
backend/src/graph_state/: state.py
backend/src/request_validation/: validation.py
backend/src/tools/: api.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.css
frontend/src/components/: body.jsx  request.js
