[tool.poetry]
name = "AI Hedge Fund"
version = "0.1.0"
description = "AI Hedge Fund"
authors = ["Navaneethan <naveenkrishnan840@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "1.63.0"
langchain-openai = "0.3.6"
langchain_community = "^0.3.6"
langchain_google_genai = "^2.0.4"
langchain_text_splitters = "^0.3.2"
langgraph = "^0.2.46"
pytz = "^2024.2"
pandas = "2.2.3"
langsmith = "0.1.144"
fastapi = "0.115.5"
pydantic = "2.10.2"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
